ops/servicemesh/circuit-breaker/app.yaml
apiVersion: v1
kind: Service
metadata:
  name: circuit-breaking
  labels:
    app: circuit-breaking
spec:
  selector:
    app: circuit-breaking
  ports:
  - port: 8000
    targetPort: http
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: fragile-app
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: circuit-breaking
      annotations:
        sidecar.istio.io/statsInclusionPrefixes: cluster.outbound,cluster_manager,listener_manager,http_mixer_filter,tcp_mixer_filter,server,cluster.xds-grpc
    spec:
      containers:
      - name: fragile-app
        image: golang:1.13
        ports:
          - name: http
            containerPort: 8000
        command: ["sh", "-c", "go run /app/fragile.go"]
        volumeMounts:
        - name: goapp
          mountPath: /app
      volumes:
        - name: goapp
          configMap:
            name: goapp
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: stable-app
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: circuit-breaking
      annotations:
        sidecar.istio.io/statsInclusionPrefixes: cluster.outbound,cluster_manager,listener_manager,http_mixer_filter,tcp_mixer_filter,server,cluster.xds-grpc  
    spec:
      containers:
      - name: stable-app
        image: golang:1.13
        ports:
          - name: http
            containerPort: 8000
        command: ["sh", "-c", "go run /app/stable.go"]
        volumeMounts:
        - name: goapp
          mountPath: /app
      volumes:
        - name: goapp
          configMap:
            name: goapp
