ops/servicemesh/circuit-breaker/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: circuit-breaking-gateway
  labels:
    app: circuit-breaking
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "circuit-breaking.frieza.local"
