ops/servicemesh/circuit-breaker/gateway-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: circuit-breaking-gateway-vs
  labels:
    app: circuit-breaking
spec:
  hosts:
  - circuit-breaking.frieza.local
  gateways:
  - circuit-breaking-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: circuit-breaking
